[project]
name = "preconf-sims"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andrew W. Macpherson", email = "mail@awmacpherson.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
